--- a/bin/css/style.css
+++ b/bin/css/style.css
@@ -35,16 +35,16 @@ div.padding.vertical {
 }
 
 div.end.inner-content {
-  background: url("../../assets/pages/end/assets/images/end.jpg");
+  background: url("../assets/pages/end/assets/images/end.jpg");
   background-size: cover;
 }
 
 div.introduce.inner-content {
-  background: url("../../assets/pages/introduce/assets/images/bg.jpg");
+  background: url("../assets/pages/introduce/assets/images/bg.jpg");
   background-size: cover;
 }
 
 div.text.inner-content {
-  background: url("../../assets/pages/text/assets/images/appBg2.jpg");
+  background: url("../assets/pages/text/assets/images/appBg2.jpg");
   background-size: cover;
 }
