--- a/src/main.less
+++ b/src/main.less
@@ -1,8 +1,8 @@
 @import 'config.less';
 
-@import '../lib/covers/simple-cover/cover.less';
+@import '../lib/pages/guide/guide.less';
 @import '../lib/loadings/simple-loading/loading.less';
-// @import '../lib/slide/simple-slide/slide.less';
+@import '../lib/slides/fancy-slide/fancy-slide.less';
 
 
 div.inner-content {
@@ -11,7 +11,7 @@ div.inner-content {
 }
 
 div.padding {
-    padding: 10px;
+    padding: 5px;
     color: #ccc;
     text-align: center; 
     &.vertical {
