remove TweenMax in loading and change swipe-tip image

--- a/lib/loadings/simple-loading/loading.css
+++ b/lib/loadings/simple-loading/loading.css
@@ -8,6 +8,7 @@
   /*margin-left: -150px;*/
   z-index: 1000000;
   background: transparent;
+  -webkit-transition: all 1s ease-in-out;
 }
 .preload-juggle {
   width: 300px;
