--- a/lib/pages/guide/guide.less
+++ b/lib/pages/guide/guide.less
@@ -1,10 +1,9 @@
 @imgRoot: "@{libUrl}/pages/guide/assets/images";
 
 div.swipe-tip {
-    @size: 16px;
     position: absolute;
-    width: @size;
-    height: @size;
+    width: 16px;
+    height: 12px;
     margin: 0 auto;
     left: 0;
     right: 0;
