--- a/lib/slides/easy-slide/easy-slide.less
+++ b/lib/slides/easy-slide/easy-slide.less
@@ -25,3 +25,19 @@
         }
     }
 }
+
+div.pages {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    section.page {
+        position: relative;
+        width: 100%;
+        background-size: cover;
+    }
+}
+
