change assets path and add bg to sample

--- a/src/pages/sample/sample.less
+++ b/src/pages/sample/sample.less
@@ -1,4 +1,9 @@
+@import '../../config.less';
+
+@bg: "sample/assets/images/bg.jpg";
+
 div.inner-content {
+    background-image: url("@{pagesUrl}/@{bg}");
     background-color: #555;
     background-size: cover;
 }
