--- a/lib/pages/guide/guide.less
+++ b/lib/pages/guide/guide.less
@@ -12,6 +12,7 @@ div.swipe-tip {
     background-repeat: no-repeat;
     background-size: cover;
     -webkit-animation: tipmove 1.5s infinite ease-in-out;
+    z-index: 100;
 }
 
 @-webkit-keyframes tipmove {
